--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,101 +1,134 @@
-#home{
-    width: 100%;
-    height: 100%;
+#home {
+  width: 100%;
+  height: 100%;
 }
 
-#welcome{
-    padding-top: 2%;
-    padding-left: 2%;
-    width: 100vw;
-    height: 35vh;
-    background-color: #D6E5E3;
+#welcome {
+  padding-top: 2%;
+  padding-left: 2%;
+  width: 100vw;
+  height: 35vh;
+  background-color: #d6e5e3;
 }
 
-#welcome > h1{
-    font-size: 60px;
+#welcome > h1 {
+  font-size: 60px;
 }
 
-#welcome-description{
-    font-size: 35px;
-    width: 65%;
+#welcome-description {
+  font-size: 35px;
+  width: 65%;
 }
-#user-info{
-    height: 65vh;
-    padding-top: 2%;
-    padding-left: 2%;
-}
-
-#user-form{
-    padding-top: 1%;
-    padding-right: 30%;
+#user-info {
+  height: 65vh;
+  padding-top: 2%;
+  padding-left: 2%;
 }
 
-#translation-window1{
-    padding-top: 2%;
-    padding-left: 2%;
-    height: 100vh;
-    background-color: #D6E5E3;
+#user-form {
+  padding-top: 1%;
+  padding-right: 30%;
 }
 
-#translation-form1{
-    padding-top: 1%;
-    padding-right: 10%;
+#translation-window1 {
+  padding-top: 2%;
+  padding-left: 2%;
+  height: 100vh;
+  background-color: #d6e5e3;
 }
 
-#translation-window2{
-    padding-top: 2%;
-    padding-left: 2%;
-    height: 100vh;
-    background-color: #FFF;
+#translation-form1 {
+  padding-top: 1%;
+  padding-right: 10%;
 }
 
-#translation-results{
-    padding-top: 2%;
-    padding-left: 2%;
-    height: 60vh;
-    border: 2px solid #D6E5E3;
-    border-radius: 5px;
-    width: 90vw;
-    overflow-y:auto
+#translation-window2 {
+  padding-top: 2%;
+  padding-left: 2%;
+  height: 100vh;
+  background-color: #fff;
 }
 
-Label{
-    font-size: 25px;
+#translation-results {
+  padding-top: 2%;
+  padding-left: 2%;
+  height: 50vh;
+  border: 2px solid #d6e5e3;
+  border-radius: 5px;
+  width: 90vw;
+  overflow-y: auto;
 }
 
-#conversation-history{
-    padding-top: 2%;
-    padding-left: 2%;
-    height: 100vh;
-    background-color: #D6E5E3;
+Label {
+  font-size: 25px;
 }
 
-#user-form > .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited { 
-    background-color: #D6E5E3 !important; 
-    border-color: #D6E5E3 !important;
-    color: black;
+#feedback-text {
+  width: 45%;
+  float: left;
 }
 
-#translation-window2 > .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited { 
-    background-color: #D6E5E3 !important; 
-    border-color: #D6E5E3 !important;
-    color: black;
+#feedback-buttons {
+  float: right;
+  width: 55%;
 }
 
-#translation-form1 > .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited { 
-    background-color: #FFF !important;
-    border-color: #FFF !important;
-    color: black;
+#feedback-row {
+  padding-bottom: 4%;
+}
+#conversation-history {
+  padding-top: 2%;
+  padding-left: 2%;
+  height: 100vh;
+  background-color: #d6e5e3;
 }
 
-#conversation-history > .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited { 
-    background-color: #FFF !important;
-    border-color: #FFF !important;
-    color: black;
+#user-form > .btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
+  background-color: #d6e5e3 !important;
+  border-color: #d6e5e3 !important;
+  color: black;
 }
 
-#summary-card{
-    padding-right: 10%;
-    overflow-y:auto
+#translation-window2 > .btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
+  background-color: #d6e5e3 !important;
+  border-color: #d6e5e3 !important;
+  color: black;
 }
 
+#feedback-buttons > .btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
+  background-color: #d6e5e3 !important;
+  border-color: #d6e5e3 !important;
+  color: black;
+}
+
+#translation-form1 > .btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
+  background-color: #fff !important;
+  border-color: #fff !important;
+  color: black;
+}
+
+#conversation-history > .btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
+  background-color: #fff !important;
+  border-color: #fff !important;
+  color: black;
+}
+
+#summary-card {
+  padding-right: 10%;
+  overflow-y: auto;
+}
